fix: reduce gap in schema form for better spacing and adjust opacity for improved visibility

--- a/src/style.css
+++ b/src/style.css
@@ -142,7 +142,7 @@ body {
     #schema-form {
         display: flex;
         flex-direction: column;
-        gap: 28px;
+        gap: 20px;
     }
 
     pre {
@@ -197,4 +197,5 @@ body {
         border: 0;
         border-top: 1px solid var(--border-color);
         margin: 0px 0;
+        opacity: 0.5;
     }
